Change home.html to index.html

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <section id="nav-menu">
         <div id="cancel">&times</div>
         <ul class="nav-menu-items">
-            <li><a href="./home.html">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="#program">Program</a></li>
             <li><a href="#join">Join</a></li>
@@ -26,7 +26,7 @@
     <header>
         <span id="hamBtn" class="material-icons">menu</span>
         <section class="desktop-menu">
-            <a href="./home.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+            <a href="./index.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
             <div class="desktop-nav-menu">
                 <ul class="desktop-menu-items">
                     <li><a href="./about.html">About</a></li>
@@ -72,7 +72,7 @@
         <div id="redline"></div>
     </section>
     <footer id="footer">
-        <a href="./home.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+        <a href="./index.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
         <p id="copyRight">2021 AdrasanFest <br> Some Rights Reserved</p>
     </footer>
     <script src="./script.js"></script>
