--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section id="nav-menu">
-        <div id="cancel">&times</div>
+        <div id="cancel">&times;</div>
         <ul class="nav-menu-items">
             <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
@@ -26,7 +26,7 @@
     <header>
         <span id="hamBtn" class="material-icons">menu</span>
         <section class="desktop-menu">
-            <a href="./index.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+            <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
             <div class="desktop-nav-menu">
                 <ul class="desktop-menu-items">
                     <li><a href="./about.html">About</a></li>
@@ -40,19 +40,19 @@
     </header>
     <section id="about">
         <h1 id="aboutTitle">ADRASAN VILLAGE <br> FESTIVAL 2022</h1>
-        <div id="redline"></div>
+        <div class="redline"></div>
         <p id="aboutDesc">Lorem ipsum dolor sit amet consectetur adipisicing elit. At et nobis eos dolorem iure eaque sit saepe exercitationem molestiae ea, nemo, autem id expedita voluptatibus, quia neque. Qui, voluptatibus consequatur?
         </p>
         <p>Please contact us per Email for any further questions about Festival!</p>
         <div id="contact">
-            <a href="#" style="color: #2c2c2c;">loremipsum@gmail.com</a>
+            <a href="#" id="mailColor">loremipsum@gmail.com</a>
             <i class="fa-solid fa-angle-right"></i>
         </div>
         
     </section>
     <section id="logo-section">
         <h2>Adrasan Village Festival 2022 Logo</h2>
-        <div id="redline"></div>
+        <div class="redline"></div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias soluta sed veritatis assumenda minus! Quasi neque nihil labore repudiandae eos exercitationem sapiente et quo? Quo voluptatem officiis fugit autem accusantium.</p>
         <div id="logoContainer">
             <i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i>
@@ -60,7 +60,7 @@
     </section>
     <section id="pastFestivals">
         <h2>See the past Adrasan Festivals</h2>
-        <div id="redline"></div>
+        <div class="redline"></div>
         <p>Take a look at the last two organisations and activities.</p>
         <div id="past-works">
             <div id="year20"><h3>2020</h3></div>
@@ -69,10 +69,10 @@
     </section>
     <section id="partners">
         <h2 id="partnerTitle">Partner</h2>
-        <div id="redline"></div>
+        <div class="redline"></div>
     </section>
     <footer id="footer">
-        <a href="./index.html" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+        <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
         <p id="copyRight">2021 AdrasanFest <br> Some Rights Reserved</p>
     </footer>
     <script src="./script.js"></script>
