--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <section id="nav-menu">
-        <div id="cancel">&times</div>
+        <div id="cancel">&times;</div>
         <ul class="nav-menu-items">
             <li><a href="./about.html">About</a></li>
             <li><a href="#program">Program</a></li>
@@ -25,13 +25,13 @@
     <header>
         <span id="hamBtn" class="material-icons">menu</span>
         <section class="desktop-menu">
-            <a href="#home" id="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+            <a href="#home" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
             <div class="desktop-nav-menu">
                 <ul class="desktop-menu-items">
                     <li><a href="./about.html">About</a></li>
                     <li><a href="#program">Program</a></li>
                     <li><a href="#join">Join</a></li>
-                    <li><a href="#join">Sponsor</a></li>
+                    <li><a href="#partner">Sponsor</a></li>
                     <li><a href="#news">News</a></li>
                 </ul>
             </div>
@@ -48,46 +48,45 @@
     </main>
     <section id="program">
         <h3 class="sectionTitle">Main Program</h3>
-        <div id="redline"></div>
+        <div class="redline"></div>
         <div class="pr-container">
             <div class="activity">
-                <i class="fa-solid fa-palette" style="font-size: 1.5rem;"></i>
+                <i class="fa-solid fa-palette icons"></i>
                 <h4 class="activityTitle">Workshops</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="activity">
-                <i class="fa-solid fa-image" style="font-size: 1.5rem;"></i>
+                <i class="fa-solid fa-image icons"></i>
                 <h4 class="activityTitle">Exhibitions</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="activity">
-                <i class="fa-solid fa-guitar" style="font-size: 1.5rem;"></i>
+                <i class="fa-solid fa-guitar icons"></i>
                 <h4 class="activityTitle">Concerts</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="activity">
-                <i class="fa-solid fa-globe" style="font-size: 1.5rem;"></i>
+                <i class="fa-solid fa-globe icons"></i>
                 <h4 class="activityTitle">Seminars</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <div class="activity">
-                <i class="fa-solid fa-tree" style="font-size: 1.5rem;"></i>
+                <i class="fa-solid fa-tree icons"></i>
                 <h4 class="activityTitle">Nature activities</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
-            <button id="redBtn">Book a place</button>
+            <button id="redBtn" type="button">Book a place</button>
             
         </div>
         <a id="hidden-nav" href="#">SEE THE WHOLE PROGRAM</a>
     </section>
     <section id="artists">
-        <h3 class="sectionTitle" style="font-weight: 700;">Featured Artists</h3>
-        <div id="redline"></div>
+        <h3 class="sectionTitle">Featured Artists</h3>
+        <div class="redline"></div>
         <ul id="artistList">
         </ul>
-        <button id="seeMore">
-            <p>MORE</p>
-            <i class="fa-solid fa-angle-down" style="color: #ec5242;"></i>
+        <button id="seeMore" type="button">MORE
+            <i class="fa-solid fa-angle-down"></i>
         </button>
     </section>
     <script src="./script.js"></script>
