Add top nav to header and add some logos into the partners section

--- a/about.html
+++ b/about.html
@@ -13,17 +13,25 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <section id="nav-menu">
-        <div id="cancel">&times;</div>
-        <ul class="nav-menu-items">
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./about.html">About</a></li>
-            <li><a href="#program">Program</a></li>
-            <li><a href="#join">Join</a></li>
-            <li><a href="#news">News</a></li>
-        </ul>
-    </section>
     <header>
+        <section id="top-nav">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></i></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#">English</a></li>
+                <li><a href="#">My Page</a></li>
+                <li><a href="#">Logout</a></li>
+        </section>
+        <section id="nav-menu">
+            <div id="cancel">&times;</div>
+            <ul class="nav-menu-items">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="#join">Join</a></li>
+                <li><a href="#news">News</a></li>
+            </ul>
+        </section>
         <span id="hamBtn" class="material-icons">menu</span>
         <section class="desktop-menu">
             <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
@@ -70,10 +78,15 @@
     <section id="partners">
         <h2 id="partnerTitle">Partner</h2>
         <div class="redline"></div>
+        <ul id="partner-logos">
+            <li><img src="./assets/gopro.png" alt="goprologo"></li>
+            <li><img src="./assets/vans.png" alt="vanslogo"></li>
+            <li><img src="./assets/starbucks.png" alt="starbucks"></li>
+        </ul>
     </section>
     <footer id="footer">
         <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
-        <p id="copyRight">2021 AdrasanFest <br> Some Rights Reserved</p>
+        <p id="copyRight">Original design idea by Cindy Chin in Behance.</p>
     </footer>
     <script src="./script.js"></script>
 </body>
