--- a/index.html
+++ b/index.html
@@ -13,20 +13,28 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <section id="nav-menu">
-        <div id="cancel">&times;</div>
-        <ul class="nav-menu-items">
-            <li><a href="./about.html">About</a></li>
-            <li><a href="#program">Program</a></li>
-            <li><a href="#join">Join</a></li>
-            <li><a href="#news">News</a></li>
-        </ul>
-    </section>
     <header>
+        <section id="top-nav">
+            <ul>
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></i></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#">English</a></li>
+                <li><a href="#">My Page</a></li>
+                <li><a href="#">Logout</a></li>
+        </section>
+        <section id="nav-menu">
+            <div id="cancel">&times;</div>
+            <ul class="nav-menu-items">
+                <li><a href="./about.html">About</a></li>
+                <li><a href="#program">Program</a></li>
+                <li><a href="#join">Join</a></li>
+                <li><a href="#news">News</a></li>
+            </ul>
+        </section>
         <span id="hamBtn" class="material-icons">menu</span>
         <section class="desktop-menu">
             <a href="#home" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
-            <div class="desktop-nav-menu">
+            <nav class="desktop-nav-menu">
                 <ul class="desktop-menu-items">
                     <li><a href="./about.html">About</a></li>
                     <li><a href="#program">Program</a></li>
@@ -34,7 +42,7 @@
                     <li><a href="#partner">Sponsor</a></li>
                     <li><a href="#news">News</a></li>
                 </ul>
-            </div>
+            </nav>
         </section>
     </header>
     <main id="home">
@@ -89,6 +97,19 @@
             <i class="fa-solid fa-angle-down"></i>
         </button>
     </section>
+    <section id="partners">
+        <h2 id="partnerTitle">Partner</h2>
+        <div class="redline"></div>
+        <ul id="partner-logos">
+            <li><img src="./assets/gopro.png" alt="goprologo" width="150" height="150"></li>
+            <li><img src="./assets/vans.png" alt="vanslogo" width="150" height="150"></li>
+            <li><img src="./assets/starbucks.png" alt="starbucks" width="150" height="150"></li>
+        </ul>
+    </section>
+    <footer id="footer">
+        <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
+        <p id="copyRight">Original design idea by Cindy Chin in Behance.</p>
+    </footer>
     <script src="./script.js"></script>
 </body>
 </html>
