Fix linter errors

--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
     <header>
         <section id="top-nav">
             <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></i></li>
+                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                 <li><a href="#">English</a></li>
                 <li><a href="#">My Page</a></li>
                 <li><a href="#">Logout</a></li>
+            </ul>
         </section>
         <section id="nav-menu">
             <div id="cancel">&times;</div>
