Change the background color of the footer in the home page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li><img src="./assets/starbucks.png" alt="starbucks" width="150" height="150"></li>
         </ul>
     </section>
-    <footer id="footer">
+    <footer id="home-footer">
         <a href="./index.html" class="logo"><i class="fa-solid fa-umbrella-beach">ADRASAN<br>VillageFest</i></a>
         <p id="copyRight">Original design idea by Cindy Chin in Behance.</p>
     </footer>
